while working on exercises

--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -1002,12 +1002,42 @@
     "3,57\n",
     "...\n",
     "```\n",
-    "\n"
+    "\n",
+    "Hint: writing a new line to file is done with `\"\\n\"`.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution!</summary>\n",
+    "    \n",
+    "```python\n",
+    "input_file = \"./data/patients_before_after.csv\"\n",
+    "output_file = \"./data/patients_diff.csv\"\n",
+    "\n",
+    "in_handle = open(input_file, \"r\")\n",
+    "out_handle = open(output_file, \"w\")\n",
+    "out_handle.write(\"Patient,Difference\\n\")\n",
+    "#without enumerate()\n",
+    "count = 0\n",
+    "for line in in_handle:\n",
+    "    count += 1\n",
+    "    if (count == 1): continue\n",
+    "    line = line.strip()\n",
+    "    #automatic unpacking\n",
+    "    (patient, before, after) = line.split(\",\")\n",
+    "    before = int(before)\n",
+    "    after = int(after)\n",
+    "    diff = before - after\n",
+    "    out_handle.write(f'{patient},{diff}\\n')\n",
+    "    print(patient, before, after, diff)\n",
+    "\n",
+    "in_handle.close()\n",
+    "out_handle.close()\n",
+    "```\n",
+    "</details>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 05. Drug trial data\n",
+    "## 05.2 Drug trial data\n",
     "In the `data` folder of this repo there is a file named [placebo_drug_test.csv](./data/placebo_drug_test.csv). If  this assignment is viewed within a browser window wou can click on the link to access it. \n",
     "Write a function named `analyse_drug_data()` that reads in the file and returns - as a dict data structure - the following information:\n",
     "\n",
@@ -1040,13 +1070,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Object-Oriented Python"
+    "# 06 Core library functions"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 06.1 enumerate\n",
+    "Look at the solution for exercise 05.1 and refactor it so that the enumerate function is used instead of this construct:\n",
+    "\n",
+    "```python\n",
+    "count = 0\n",
+    "for line in in_handle:\n",
+    "    count += 1\n",
+    "    #more code\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06.2 `chr()` \n",
+    "Below is a secret message encoded in numbers. Each number represents a letter.\n",
+    "Can you crack it with the `chr()` function?\n",
+    "Note, you will also need to use `int()`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "encrypted = '73|32|104|111|112|101|32|71|111|111|103|108|101|32|105|115|32|109|111|114|101|32|99|97|114|101|102|117|108|108|32|119|105|116|104|32|109|121|32|100|97|116|97|33'\n",
+    "decrypted = \"\"\n",
+    "for c in encrypted.split(\"|\"):\n",
+    "    decrypted += chr(int(c))    \n",
+    "decrypted\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The encoded message:\n",
+    "encrypted = '73|32|104|111|112|101|32|71|111|111|103|108|101|32|105|115|32|109|111|114|101|32|99|97|114|101|102|117|108|108|32|119|105|116|104|32|109|121|32|100|97|116|97|33'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06.3 `ord()`\n",
+    "Do the reverse of the above exercise: create an encrypted message from the given text.\n",
+    "Write a function for this task that accepts as arguments the message to encryp and the separator to use. The separator should default to `'|'`. Note, you will also need to use `str()`.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "def encrypt(message, separator = '|'):\n",
+    "    result = list()\n",
+    "    for c in message:\n",
+    "        result.append(str(ord(c)))\n",
+    "    #the join method is more efficient than \"text += text\" concatenation\n",
+    "    return separator.join(result)\n",
+    "    \n",
+    "message = \"Keep it secret, keep is safe!\"\n",
+    "print(encrypt(message))\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = \"Keep it secret, keep is safe!\"\n",
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06.4 Sorting\n",
+    "\n",
+    "Given the list of tuples below, holding first names, last names and ages of persons, sort it according to\n",
+    "\n",
+    "A) First name\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "# default behaviour is already correct!\n",
+    "sorted(persons)\n",
+    "\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "C) Age (from high to low)\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "sorted(persons, key = lambda person: person[2], reverse=True)\n",
+    "```\n",
+    "</details>\n",
+    "\n",
+    "\n",
+    "B) Last name and first name\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "# create a key of two person elements: last and then first name\n",
+    "sorted(persons, key = lambda person: (person[1], person[0]))\n",
+    "\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "persons = [('John', 'Doe', 57),\n",
+    "          ('Anna', 'Doe', 62),\n",
+    "          ('Allie', 'Zandt', 42),\n",
+    "          ('Roger', 'Marre', 35),\n",
+    "          (\"Z'duru\", 'Ambarda', 39)]\n",
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06.5 The `sys` module\n",
+    "\n",
+    "Using the correct output streams, print messages to get output that looks like this:\n",
+    "![pics/output_streams_example.png](./pics/output_streams_example.png)\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "import sys\n",
+    "print(\"Welcome to flight 464 to Amsterdam\")\n",
+    "print(\"Uhm, I think we just lost an engine\", file=sys.stderr)\n",
+    "print(\"Oh my God we are all going to die!\", file=sys.stderr)\n",
+    "\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06.6 What happens if...\n",
+    "You type `sys.exit()` below and run the cell?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 06.7 The `os` module\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n"
+   ]
   },
   {
    "cell_type": "markdown",
