--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -1163,7 +1163,7 @@
     "\n",
     "Given the list of tuples below, holding first names, last names and ages of persons, sort it according to\n",
     "\n",
-    "A) First name\n",
+    "a) First name\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
@@ -1175,7 +1175,7 @@
     "```\n",
     "</details>\n",
     "\n",
-    "C) Age (from high to low)\n",
+    "b) Age (from high to low)\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
@@ -1186,7 +1186,7 @@
     "</details>\n",
     "\n",
     "\n",
-    "B) Last name and first name\n",
+    "c) Last name and first name\n",
     "\n",
     "<details>\n",
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
@@ -1270,18 +1270,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.7 The `os` module\n",
+    "## 06.7 The `csv` module\n",
+    "Repeat exercise 05.2 but this time use the csv module.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 07 Comprehensions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 07.1 Starting simple\n",
+    "Using comprehensions and the `range(8)` function call as basic iterator, generate the following lists:\n",
+    "\n",
+    "a) `[2, 2, 2, 2, 2, 2, 2, 2]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "[2 for x in range(8)]\n",
+    "```\n",
+    "</details>\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) `[0, 1, 4, 9, 16, 25, 36, 49]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "[x**2 for x in range(8)]\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) `[0, 1, 2, 3, 4]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "[x for x in range(8) if x < 5]\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) `[1, 3, 5, 7]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "[x for x in range(10) if x % 2 == 1]\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e) `[10, 12, 14, 16]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "[x+10 for x in range(8) if x%2==0]\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n"
+    "#YOUR CODE\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1341,7 +1434,7 @@
     "\n",
     "1. Start by writing a single function that determines whether a given input string is a palindrome.\n",
     "2. Next, write a function that looks for a palindrome with a minimal length within a given input string, where the rest of the string is not important. Apply this to \n",
-    "3. Extend this to processing a word list passed through the command-line. There are two such lists to be found in the `data` folder of this repo: `dutch_words.txt` and `english_woprds.txt`\n",
+    "3. Extend this to processing a word list passed through the command-line. There are two such lists to be found in the `data` folder of this repo: `dutch_words.txt` and `english_words.txt`\n",
     "4. Apply yourself to molecular biology: create a program that looks for palindromes in a given DNA sequence. The sequence below contains at least 2 palindromes of differing lengths. Challenges could be: Find all 6-nucleotide palindromes, or What is the longest palindrome in the human genome?\n",
     "\n",
     "```\n",
