--- a/02_data.ipynb
+++ b/02_data.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -217,7 +217,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/michielnoback/git_projects/python_intro/02_data_types.ipynb Cell 11'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/michielnoback/git_projects/python_intro/02_data_types.ipynb#ch0000029?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mHello, \u001b[39m\u001b[39m'\u001b[39m \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39mworld!\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/michielnoback/git_projects/python_intro/02_data_types.ipynb#ch0000029?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mHello, \u001b[39m\u001b[39m'\u001b[39m \u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/michielnoback/git_projects/python_intro/02_data_types.ipynb#ch0000029?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39;49m\u001b[39mHello\u001b[39;49m\u001b[39m'\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m2\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello, \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mworld!\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello, \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mHello\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m) \u001b[38;5;66;03m# gives a TypeError\u001b[39;00m\n",
       "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
      ]
     }
@@ -316,24 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The character(s) selected by letters[0] are A\n",
-      "The character(s) selected by letters[3] are D\n",
-      "The character(s) selected by letters[-3] are I\n",
-      "The character(s) selected by letters[2:6] are CDEF\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "letters = 'ABCDEFGHIJK'\n",
     "\n",
@@ -345,24 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The character(s) selected by letters[::2] are ACEGIK\n",
-      "The character(s) selected by letters[:] are ABCDEFGHIJK\n",
-      "The character(s) selected by letters[::-2] are DB\n",
-      "The character(s) selected by letters[:-5:-2] are KI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "letters = 'ABCDEFGHIJK'\n",
     "\n",
@@ -456,26 +434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HELLO\n",
-      "2\n",
-      "['Hi', 'I', 'am', 'a', 'programmer']\n",
-      "A+B+C\n",
-      "     Hello\n",
-      "Foo Bar Baz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s1 = \"Hello\"\n",
     "print(s1.upper())      # every character to uppercase\n",
@@ -484,7 +449,7 @@
     "\n",
     "print(\"Hi I am a programmer\".split(\" \"))    # split on space to get a list of words\n",
     "\n",
-    "print(\"+\".join(\"ABC\")) # combine individual characters with a separator\n",
+    "print(.join(\"ABC\")) # combine individual characters with a separator\n",
     "\n",
     "print(s1.rjust(10))    # right jusitify at 10 characters\n",
     "\n",
@@ -511,24 +476,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Michiel'"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = 'Michiel Noback'\n",
     "# your code"
@@ -551,24 +505,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'builtin_function_or_method'>\n",
-      "<class 'type'>\n",
-      "<class '__main__.Foo'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(42))\n",
     "print(type(print))\n",
@@ -602,23 +545,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'orange', 'kiwi', 'pear', 'banana', 'plum']\n",
-      "['apple', 'orange', 'plum']\n",
-      "['apple', 'grapefruit', 'strawberry', 'orange', 'plum']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"apple\", \"orange\", \"kiwi\", \"pear\"]\n",
     "fruits += [\"banana\", \"plum\"]       # extend and overwrite\n",
@@ -645,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -693,24 +626,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'orange', 'kiwi', ['banana', 'plum'], 'guava', 'cherry']\n",
-      "cherry\n",
-      "5\n",
-      "['guava', ['banana', 'plum'], 'kiwi', 'orange', 'apple']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fruits = [\"apple\", \"orange\", \"kiwi\"] # note the square brackets\n",
     "fruits.append([\"banana\", \"plum\"])    # adds an embedded list\n",
@@ -753,22 +675,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('bear', 'horse')\n",
-      "('bear', 'horse', 'ant', 'platypus')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "animals = (\"bear\", \"horse\", \"ant\")  # note the parentheses ()\n",
     "print(animals[:2])                  # OK\n",
@@ -833,21 +746,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'beetle', 'deer'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "animals = set()\n",
     "animals.add(\"deer\") \n",
@@ -862,22 +767,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'beetle', 'deer', ('zebra', 'armadillo')}\n",
-      "{'beetle', ('zebra', 'armadillo')}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#animals.add([\"gorilla\", \"horse\"]) # TypeError, not immutable/hashable\n",
@@ -949,25 +845,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'apple', 'banana', 'orange', 'pear', 'kiwi'}\n",
-      "{'kiwi'}\n",
-      "False\n",
-      "False\n",
-      "{'orange', 'pear', 'apple', 'banana'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = {'apple', 'banana', 'kiwi'}\n",
     "B = {'kiwi', 'orange', 'pear'}\n",
@@ -997,25 +881,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Sue', 'Lilith']\n",
-      "we have lions!\n",
-      "we have lions!\n",
-      "Bobolin\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "zoo = {'lion' : 'Carl',\n",
     "      'leopard' : ['Sue', \"Lilith\"],\n",
@@ -1165,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
