--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -850,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 03. Flow control"
+    "## 03. Flow control"
    ]
   },
   {
@@ -895,7 +895,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 03.3 looping with `for`\n",
+    "### 03.3 looping with `for` (1)\n",
+    "\n",
+    "From this list, `[3, 6, 8, 2, 7, 5, 1, 4]`, create a list holding tuples of each consecutive pair of numbers, like this: `[(3, 6), (8, 2), (7, 5), (1, 4)]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "Many solutions possible; here are a few.\n",
+    "    \n",
+    "```python\n",
+    "result = list()\n",
+    "for i in range(0, len(l), 2):\n",
+    "    result.append((l[i], l[i+1]))\n",
+    "result\n",
+    "```\n",
+    "\n",
+    "or\n",
+    "    \n",
+    "```python\n",
+    "l = [3, 6, 8, 2, 7, 5, 1, 4]\n",
+    "result = list()\n",
+    "for i in range(len(l)):\n",
+    "    if i % 2 == 0:\n",
+    "        result.append((l[i], l[i+1]))\n",
+    "result\n",
+    "```\n",
+    "\n",
+    "or\n",
+    "    \n",
+    "```python\n",
+    "result = list()\n",
+    "index = 0 # enumerate() is better but not dealt with\n",
+    "for n in l:\n",
+    "    if index % 2 == 0:\n",
+    "        result.append((l[index], l[index+1]))\n",
+    "    index += 1\n",
+    "result\n",
+    "```\n",
+    "</details>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [3, 6, 8, 2, 7, 5, 1, 4]\n",
+    "# YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03.4 looping with `for` (2)\n",
     "\n",
     "Given the text presented below, report \n",
     "1. the number of sentences\n",
@@ -958,7 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 04 Functions"
+    "## 04 Functions"
    ]
   },
   {
@@ -981,14 +1036,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 05 Reading and Writing files"
+    "## 05 Reading and Writing files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 05.1 Patient before & after treatment data\n",
+    "### 05.1 Patient before & after treatment data\n",
     "In the `data` folder of this repo there is a file named [patients_before_after.csv](./data/patients_before_after.csv). If this assignment is viewed within a browser window wou can click on the link to access it. \n",
     "Write a function named `process_patient_data()` that \n",
     "\n",
@@ -1048,7 +1103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 05.2 Drug trial data\n",
+    "### 05.2 Drug trial data\n",
     "In the `data` folder of this repo there is a file named [placebo_drug_test.csv](./data/placebo_drug_test.csv). If  this assignment is viewed within a browser window wou can click on the link to access it. \n",
     "Write a function named `analyse_drug_data()` that reads in the file and returns - as a dict data structure - the following information:\n",
     "\n",
@@ -1070,14 +1125,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 06 Core library functions"
+    "## 06 Core library functions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.1 enumerate\n",
+    "### 06.1 enumerate\n",
     "Look at the solution for exercise 05.1 and refactor it so that the enumerate function is used instead of this construct:\n",
     "\n",
     "```python\n",
@@ -1092,7 +1147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.2 `chr()` \n",
+    "### 06.2 `chr()` \n",
     "Below is a secret message encoded in numbers. Each number represents a letter.\n",
     "Can you crack it with the `chr()` function?\n",
     "Note, you will also need to use `int()`\n",
@@ -1124,7 +1179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.3 `ord()`\n",
+    "### 06.3 `ord()`\n",
     "Do the reverse of the above exercise: create an encrypted message from the given text.\n",
     "Write a function for this task that accepts as arguments the message to encryp and the separator to use. The separator should default to `'|'`. Note, you will also need to use `str()`.\n",
     "\n",
@@ -1159,7 +1214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.4 Sorting\n",
+    "### 06.4 Sorting\n",
     "\n",
     "Given the list of tuples below, holding first names, last names and ages of persons, sort it according to\n",
     "\n",
@@ -1214,11 +1269,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.5 The `sys` module\n",
+    "### 06.5 The `sys` module\n",
     "\n",
     "Using the correct output streams, print messages to get output that looks like this:\n",
     "![pics/output_streams_example.png](./pics/output_streams_example.png)\n",
@@ -1253,7 +1307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.6 What happens if...\n",
+    "### 06.6 What happens if...\n",
     "You type `sys.exit()` below and run the cell?"
    ]
   },
@@ -1270,7 +1324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 06.7 The `csv` module\n",
+    "### 06.7 The `csv` module\n",
     "Repeat exercise 05.2 but this time use the csv module.\n"
    ]
   },
@@ -1278,14 +1332,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 07 Comprehensions\n"
+    "## 07 Comprehensions\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 07.1 Starting simple\n",
+    "### 07.1 Starting simple\n",
     "Using comprehensions and the `range(8)` function call as basic iterator, generate the following lists:\n",
     "\n",
     "a) `[2, 2, 2, 2, 2, 2, 2, 2]`\n",
@@ -1370,11 +1424,225 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 07.2 Some more juice in comprehensions\n",
+    "These exercises should all be solved using comprehensions.\n",
+    "\n",
+    "a) from this list, `[3, 1, 6, 5, 2]` create the list `[[0, 1, 2], [0], [0, 1, 2, 3, 4, 5], [0, 1, 2, 3, 4], [0, 1]]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "l = [3, 1, 6, 5, 2]\n",
+    "[[x for x in range(n)] for n in l]\n",
+    "```\n",
+    "</details>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) from this list, `[3, 1, 6, 5, 2]` create the list `[[2, 1, 0], [0], [5, 4, 3, 2, 1, 0], [4, 3, 2, 1, 0], [1, 0]]`\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "l = [3, 1, 6, 5, 2]\n",
+    "[[x for x in reversed(range(n))] for n in l]\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) from this list, `[3, 1, 6, 5, 2]` create the dict `{3: 3, 1: 0, 6: 15, 5: 10, 2: 1}`. This is the sum of 0 (or 1) to the corresponding number.\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "    \n",
+    "```python\n",
+    "l = [3, 1, 6, 5, 2]\n",
+    "{n:[x for x in reversed(range(n))] for n in l}\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l = [3, 1, 6, 5, 2]\n",
+    "\n",
+    "# YOUR CODE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 08 Object-oriented Programming"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 08.1 A Zoo class\n",
+    "\n",
+    "a). Study the docs of `defaultdict` from module `collections` [here](https://docs.python.org/3/library/collections.html#collections.defaultdict). You should use this container in this exercise. Create a Zoo class that can be used to hold a collection of zoo animals. Initialize it with a `defaultdict` to hold animals that will be retrievable by species name.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "\n",
+    "```python\n",
+    "from collections import defaultdict\n",
+    "class Zoo:\n",
+    "    def __init__(self):\n",
+    "        self.animals = defaultdict()\n",
+    "```\n",
+    "\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b). Implement a method within class Zoo that can be used to add animals with a species name and animal name. It should have this signature:\n",
+    "\n",
+    "```python\n",
+    "def add_animal(self, species, name):\n",
+    "```\n",
+    "\n",
+    "To demonstrate correctness, implement a method that can be used to fetch all names of animals of a given species, defaulting to an empty list if no such animal species is in the Zoo:\n",
+    "\n",
+    "```python\n",
+    "def get_animals(self, species):\n",
+    "```\n",
+    "\n",
+    "Demonstrate: Create and fill the Zoo with some animals and fetch some existing and non-existing animals.\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "\n",
+    "```python\n",
+    "from collections import defaultdict\n",
+    "class Zoo:\n",
+    "    def __init__(self):\n",
+    "        self.animals = defaultdict()\n",
+    "    \n",
+    "    def add_animal(self, species, name):\n",
+    "        self.animals.setdefault(species, []).append(name)\n",
+    "    \n",
+    "    def get_animals(self, species):\n",
+    "        return self.animals.get(species, [])\n",
+    "    \n",
+    "z = Zoo()\n",
+    "z.add_animal(\"bear\", \"Jonas\")\n",
+    "z.add_animal(\"bear\", \"Boris\")\n",
+    "z.add_animal(\"parrot\", \"Tweety\")\n",
+    "\n",
+    "print(z.get_animals(\"bear\"))\n",
+    "print(z.get_animals(\"lion\"))\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c). Implement a string representation function (using the correct hook) that will display the following information when an instance of the class is printed:\n",
+    "\n",
+    "> Zoo {bear: Jonas & Boris; lemming: Peter & Roger & Anne; parrot: Tweety}\n",
+    "\n",
+    "Note the animals are sorted by species name and animal name!\n",
+    "\n",
+    "<br>\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "\n",
+    "The function to be implemented is `__str__()`.<br>\n",
+    "Use `\"str\".join(list)` to combine elements.\n",
+    "\n",
+    "</details>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "\n",
+    "```python\n",
+    "from collections import defaultdict\n",
+    "class Zoo:\n",
+    "    def __init__(self):\n",
+    "        self.animals = defaultdict()\n",
+    "    \n",
+    "    def add_animal(self, species, name):\n",
+    "        self.animals.setdefault(species, []).append(name)\n",
+    "    \n",
+    "    def get_animals(self, species):\n",
+    "        return self.animals.get(species, [])\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        str_repr = []\n",
+    "        for a in sorted(self.animals.keys()):\n",
+    "            sp = a + \": \" + \" & \".join(self.animals.get(a))\n",
+    "            str_repr.append(sp)\n",
+    "        return \"Zoo {\" + \"; \".join(str_repr) + \"}\"\n",
+    "    \n",
+    "zoo = Zoo()\n",
+    "zoo.add_animal(\"lemming\", \"Peter\")\n",
+    "zoo.add_animal(\"lemming\", \"Roger\")\n",
+    "zoo.add_animal(\"lemming\", \"Anne\")\n",
+    "zoo.add_animal(\"bear\", \"Jonas\")\n",
+    "zoo.add_animal(\"bear\", \"Boris\")\n",
+    "zoo.add_animal(\"parrot\", \"Tweety\")\n",
+    "\n",
+    "print(zoo)\n",
+    "```\n",
+    "\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# =YOUR CODE\n"
+   ]
   },
   {
    "cell_type": "markdown",
