--- a/08_oo_programming.ipynb
+++ b/08_oo_programming.ipynb
@@ -942,6 +942,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b5c131d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "The `__iter__()` method is called when an instance of your class is used in an iteration context such as a `for` loop or collection constructors. It is expected to return an object that will actually do the iteration. Usually this is the object itself, but you can delegate to instance variables that are iterable objects themselves as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5485186c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 - 4 - 1 - 6 - 3 - "
+     ]
+    }
+   ],
+   "source": [
+    "class ListWrapper:\n",
+    "    def __init__(self, seed_elements):\n",
+    "        self.elements = list()\n",
+    "        if seed_elements: # non-empty\n",
+    "            self.elements.extend(seed_elements)\n",
+    "            \n",
+    "    def addElements(self, elements):\n",
+    "        self.elements.extend(elements)\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self.elements.__iter__()\n",
+    "    \n",
+    "lw = ListWrapper([2, 4, 1])\n",
+    "lw.addElements([6, 3])\n",
+    "for e in lw:\n",
+    "    print(e, end= \" - \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa87635e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Below is the complete finsihed `Performance` class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "79d444e4",
@@ -1199,7 +1260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
