--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -1595,7 +1595,49 @@
     "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
     "\n",
     "The function to be implemented is `__str__()`.<br>\n",
-    "Use `\"str\".join(list)` to combine elements.\n",
+    "Use `\"str\".join(list)` to combine elements.  <br>  <br>\n",
+    "\n",
+    "</details>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me the solution</summary>\n",
+    "\n",
+    "```python\n",
+    "from collections import defaultdict\n",
+    "class Zoo:\n",
+    "    ## rest of code omitted!\n",
+    "    def __str__(self):\n",
+    "        str_repr = []\n",
+    "        for a in sorted(self.animals.keys()):\n",
+    "            sp = a + \": \" + \" & \".join(self.animals.get(a))\n",
+    "            str_repr.append(sp)\n",
+    "        return \"Zoo {\" + \"; \".join(str_repr) + \"}\"\n",
+    "```\n",
+    "</details>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d). Make the Zoo class iterable. When used in a for loop or other iteration context, instances should sequentially serve animals as a tuple. in this tuple, the first element should be a species name and the second the animal name. Extra credits to do this with comprehensions.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<details>\n",
+    "  <summary style = \"color:OrangeRed;cursor:pointer;\">&#10149; Give me a hint</summary>\n",
+    "    \n",
+    "You should use the `__iter__()` hook to serve a new data representation of the Zoo animals.\n",
+    "This needs a nested looping to create the requested datastructure - or a nested comprehension.  <br>  <br>\n",
     "\n",
     "</details>\n",
     "\n",
@@ -1621,6 +1663,19 @@
     "            str_repr.append(sp)\n",
     "        return \"Zoo {\" + \"; \".join(str_repr) + \"}\"\n",
     "    \n",
+    "    def __iter__(self):\n",
+    "        ## best but hard to read\n",
+    "        iterator = [(species, animal) for species in self.animals for animal in self.animals[species]]\n",
+    "    \n",
+    "        ## more code but easy to read\n",
+    "        #iterator = list()\n",
+    "        #for species in self.animals:\n",
+    "        #    for animal in self.animals[species]:\n",
+    "        #        iterator.append((species, animal))\n",
+    "        #\n",
+    "        ## delegate!\n",
+    "        return iterator.__iter__()\n",
+    "    \n",
     "zoo = Zoo()\n",
     "zoo.add_animal(\"lemming\", \"Peter\")\n",
     "zoo.add_animal(\"lemming\", \"Roger\")\n",
@@ -1629,7 +1684,8 @@
     "zoo.add_animal(\"bear\", \"Boris\")\n",
     "zoo.add_animal(\"parrot\", \"Tweety\")\n",
     "\n",
-    "print(zoo)\n",
+    "for a in zoo:\n",
+    "    print(a)\n",
     "```\n",
     "\n",
     "</details>\n"
@@ -1637,11 +1693,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# =YOUR CODE\n"
+    "# YOUR CODE\n"
    ]
   },
   {
@@ -1649,7 +1705,7 @@
    "metadata": {},
    "source": [
     "# 10. Programming challenges\n",
-    "All these challenges require you to use several to many of the learned concepts of this course. They are star-coded to indicate the difficulty level, ranging from one `*` to five `*****`. Some challenges start out with one star, but are more stars when finished completely.\n",
+    "All these challenges require you to use several to many of the learned concepts of this course. They are star-coded to indicate the difficulty level, ranging from one <strong>&#10034;</strong> to five <strong>&#10034;&#10034;&#10034;&#10034;&#10034;</strong>. Some challenges start out with one star, but represent more stars when finished completely.\n",
     "\n",
     "You are encouraged to create real programs in dedicated scripts, with a `main()` method that is called from within this construct:\n",
     "\n",
@@ -1659,14 +1715,14 @@
     "```\n",
     "\n",
     "Write functions that are small, well-documented, and serve only a single well-defined purpose.\n",
-    "To become a real-world programmer you could also start making use of the `argparse` module."
+    "To become a real-world programmer you could also start making use of the [argparse module](https://docs.python.org/3/library/argparse.html) to process command-line arguments."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.1 A number guessing game (**)\n",
+    "### 10.1 A number guessing game (&#10034;)\n",
     "\n",
     "Write an application that asks the user to think of a number, and try to guess this number as efficiently as possible.\n",
     "\n",
@@ -1691,7 +1747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.2 Finding palindromes (* to ****)\n",
+    "### 10.2 Finding palindromes (&#10034; to &#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "A palindrome is a word, phrase, or sequence that reads the same backwards as forwards, e.g. \"madam\" or \"nurses run\". In biological sequence analysis palindromes are often important protein-binding DNA elements. They are sometimes literal palindromes, as in \"GGATTAGG\", or _complementary_ palindromes, where the same sequence is present in the reverse complement strand of the double helix, as in GGAATTCC:\n",
     "\n",
@@ -1715,7 +1771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.3 Hangman word guessing game (***)\n",
+    "### 10.3 Hangman word guessing game (&#10034;&#10034;)\n",
     "\n",
     "Hangman is a word-quessing game where one party (in this case the computerprogram you will write) chooses a word that the other party needs to guess. The number of letters in the word is indicated with dashes or underscores.  \n",
     "The guessing party takes turns guessing wich letter will be in the word. If the guessed letter is in the word the dashes are replaced at the correct position(s) with the letter. If the guessed letter is not in the word, a gallow is build piece by piece (one piece for each absent letter). In total, the gallow consists of nine parts, including the hanged. You can choose to visualize progress using another picture of course. The easiest way is using \"ASCII art\", as in this example:\n",
@@ -1737,7 +1793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.4 Encrypt and decrypt messages using Caesar cipher (***)\n",
+    "### 10.4 Encrypt and decrypt messages using Caesar cipher (&#10034;&#10034; to &#10034;&#10034;&#10034;)\n",
     "\n",
     "Caesar's cipher is one of the simplest and most widely known encryption techniques. Each letter in a text is replaced by a letter some fixed number of positions down (or iup) the alphabet.\n",
     "For example, with a left shift of 3, D would be replaced by A, E would become B, and so on. The method is named after Julius Caesar, who used it in his private correspondence (see [Wikipedia](https://en.wikipedia.org/wiki/Caesar_cipher)).\n",
@@ -1751,7 +1807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.5 Implement k-Means clustering (****)\n",
+    "### 10.5 Implement k-Means clustering (&#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "The k-Means clustering algorithm is used much in data science to group data in an unsupervised manner. See [Wikipedia](https://en.wikipedia.org/wiki/K-means_clustering) for details.\n",
     "\n",
@@ -1792,14 +1848,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.6 Implement nearest-neighbour clustering (****)"
+    "### 10.6 Implement neighbor joining clustering(&#10034;&#10034;&#10034;&#10034;)\n",
+    "\n",
+    "See [Wikipedia](https://en.wikipedia.org/wiki/Neighbor_joining) for details.\n",
+    "You could employ several strategies. The first is classical joining where you end up with a structure with all nodes connected. You can also force the algorithm to stop when a set number of clusters has been formed. This makes it comparable to k-Means but without the random seeding (thus deterministic)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.7 Create a boids simulation (*****)"
+    "### 10.7 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.8 Create a Game of Life simulation app (&#10034;&#10034;&#10034;&#10034;&#10034;)\n",
+    "\n",
+    "The [Game of Life](https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life) or Conway's Game of Life is a simulation of a simple growth experiment. It follows a few simple rules deciding whether a cell (an element in a 2D grid) will live or die. The challenge here is to visualize the simulation so you will need to work with a Graphical User Interface (GUI) toolkit. There are several libraries for that purpose available in Python but I suggest you use TkInter, PyQt5 or PySimpleGUI - see [here](https://www.activestate.com/blog/top-10-python-gui-frameworks-compared/). \n"
    ]
   }
  ],
@@ -1819,7 +1887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
