programming challenges finished

--- a/10_exercises.ipynb
+++ b/10_exercises.ipynb
@@ -1807,7 +1807,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.5 Implement k-Means clustering (&#10034;&#10034;&#10034;&#10034;)\n",
+    "### 10.5 Create a data dashboard (&#10034;&#10034; to &#10034;&#10034;&#10034;&#10034;)\n",
+    "Create an app that receives a file with structured data (columns) as input. The app then reads this file _in a streaming manner_ and reports statistics of the file contents. The first three of these are mandatory, the subsequent features are optional and increase the level of this challenge.\n",
+    "\n",
+    "1. Dimensions of the dataset (rows/comuns)\n",
+    "2. Type of data in the columns\n",
+    "3. Descriptive statistics of each column;\n",
+    "    - if numeric: a [five-number summary](https://en.wikipedia.org/wiki/Five-number_summary) plus the mean\n",
+    "    - if character: the number of unique values and a listing of frequencies of these if the number of unique values is below 10\n",
+    "4. A pairwise correlation matrix of the numeric columns (if less than 6 or so). For this you will need to use something like numpy, see [here](https://machinelearningmastery.com/how-to-use-correlation-to-understand-the-relationship-between-variables/)\n",
+    "5. Embed this in a GUI; there are several libraries for that purpose available in Python but I suggest you use TkInter, PyQt5 or PySimpleGUI - see [here](https://www.activestate.com/blog/top-10-python-gui-frameworks-compared/). \n",
+    "6. Be creative; and impress yourself and your teacher."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10.6 Implement k-Means clustering (&#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "The k-Means clustering algorithm is used much in data science to group data in an unsupervised manner. See [Wikipedia](https://en.wikipedia.org/wiki/K-means_clustering) for details.\n",
     "\n",
@@ -1848,17 +1865,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10.6 Implement neighbor joining clustering(&#10034;&#10034;&#10034;&#10034;)\n",
+    "### 10.7 Implement neighbor joining clustering(&#10034;&#10034;&#10034;&#10034;)\n",
     "\n",
     "See [Wikipedia](https://en.wikipedia.org/wiki/Neighbor_joining) for details.\n",
     "You could employ several strategies. The first is classical joining where you end up with a structure with all nodes connected. You can also force the algorithm to stop when a set number of clusters has been formed. This makes it comparable to k-Means but without the random seeding (thus deterministic)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 10.7 \n"
    ]
   },
   {
